# roam

./: .gitignore  Cargo.toml  README.md  cert.pem  client_config.toml  key.pem  release.sh  roam.db  server.db  server_config.toml
.github/workflows/: release.yml
.sqlx/: query-32a0354540c64ae21637376bf7acbe3864a28270f6fab65bcccab8ab8852a55c.json  query-41172d1a15b2b072d663a55aed3549820a3e62cf688b7481163ec24f4d257b6d.json  query-5a482711c463c358195b00bb1e0bcddd965edf198d88ffdcb99527b855a59d14.json  query-719ffdaa5e6f2a2a0c8771b4e8c63a5aff92f61ce16a174adfdc2a86c2f4eb0d.json  query-a61161bd2f1f90235552c4c298c23d2d293ee309a7fcf5a9ca577b7c34beedc5.json  query-b4092b75cbfca44e4fbce9248786921c696aea2fd5d646f9b15c181b8a380abf.json  query-b7f00cd8d96b2fc7cad67c1f16e8d691d1e7ce6f892651029ffe05b56ff14046.json  query-caad8ec1acc8229a7bb4002fc3859893e6f6f7192b25eed4aa80ff75620d399d.json  query-e4006a6ef5a4d4b3c8264d6c87a3e57506dc563f63b9d53ffa5c4b6ed70719d2.json  query-e62f57e0c99f9419b204f6312b6af0ac0323fb283dfe60815e8226471b0fe8fb.json
client/: .env  Cargo.toml
client/src/: app.rs  command_handler.rs  config.rs  main.rs  service.rs
common/: Cargo.toml
common/src/: lib.rs
server/: .env  Cargo.toml
server/.sqlx/: query-0515b2de2ed11c48dccb27a6722b4f3b0dd9451c0c9c99182114aeb0568819ae.json  query-0df735ebff6c0b6d7e632cdd997713bc62208841aee41a5ab64fc5831fcdf010.json  query-0eda82ca297eb52ef3b63b9090a75ddeed9ee4d70a434a4b9aca290e6400f10a.json  query-17ffc668433ac0368d1f28bdb77b4da07b05783b98e8888729b3397056a30682.json  query-3b76eeb555a84b5dc9844dac35847d66fef92a7f853c1b4659944e11ced952ac.json  query-489d4104058a3b1250ec5c3bd3177dcb9910925ca354ab80de88b196577f8649.json  query-544fad633615f26bcc8a60867a787362ad3d452fdecc73db1ad84d41a895093d.json  query-635156d7973aee269a6a56f48b01847335171b301968af0adb322716ce0c5b4e.json  query-7c2bcd0adeda0ec5db976d3e28c349e675fb6d4b823419b0e35e59c851aaed14.json  query-887d8f4d3216f049120d9443c72cb02988835b3244594ebac31ece4ee513a21a.json  query-8c32f22655c14f437991ab3bce9921407980167acce430b22319fd3c86aa281e.json  query-b0e0e8d085fab74ab7b591e2aed46ccd79f0304f173365fe5bdc54814bedf7a4.json  query-c8a2aa4964420bb0b0b73b95ce432a08ebc6c959296725a860af55c8d42e4131.json  query-dbcb0376fe695db6a7854a6523ab24440981395da915b34e17ac1b7934084e20.json  query-e171648a3d8826064c246455ac8cf1a6819f7b5dfd34d208f8a422157c293de6.json  query-e81c135629d0e1e39fee42a24c399f6085cd66746cc2a94ef3b042cd7c63af22.json  query-ea216cc8ddd0e761518d5910633e90a929fa9bb8bfb97357ca9c8f50a426fa82.json
server/src/: app.rs  assets.rs  config.rs  db.rs  handlers.rs  main.rs  service.rs  state.rs
server/uploads/staging/: RJ.7 软件系统功能检查表（国标）20260120.xls
server/web/: index.html
