[package]
name = "client"
version = "0.1.7"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["multipart", "json", "blocking", "rustls-tls"] }
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }
hostname = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
config = "0.15.19"
self-replace = "1.5.0"
dotenvy = "0.15.7"
clap = { version = "4.5.57", features = ["derive"] }
service-manager = "0.10.0"
encoding_rs = "0.8.35"
codepage = "0.1.2"
zip = "0.6.6"
walkdir = "2.5.0"
