[package]
name = "server"
version = "0.2.5"
edition = "2021"

[dependencies]
common = { path = "../common" }
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros", "chrono"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
# lettre = "0.11"
futures = "0.3"
anyhow = "1.0"
dashmap = "6.1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
config = "0.15.19"
dotenvy = "0.15.7"
service-manager = "0.10.0"
rust-embed = "8.11.0"
mime_guess = "2.0.5"
zip = "0.6.6"
walkdir = "2.5.0"
chrono = "0.4.43"
sha2 = "0.10.9"
hex = "0.4.3"
rustls = { version = "0.23", features = ["ring"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rcgen = "0.14.7"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
